feat: add health-only server for validator mode
- bounty-health-server: minimal HTTP server with /health, /get_weights, /config
- Validator mode now runs health server instead of sleep infinity
- Returns empty weights in validator mode (platform uses chain weights)
- Docker health check will now pass in validator mode

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ path = "src/main.rs"
 name = "bounty"
 path = "src/bin/bounty/main.rs"
 
+[[bin]]
+name = "bounty-health-server"
+path = "src/bin/bounty-health-server.rs"
+
 [dependencies]
 # Platform SDK
 platform-challenge-sdk = { git = "https://github.com/PlatformNetwork/platform.git", rev = "c09cd79", features = ["http-server"] }
