refactor: clean up codebase and fix API inconsistencies
- Remove unused imports (error from tracing, GhIssue from examples)
- Fix unused variables in main.rs (total_synced, total_valid, total_invalid)
- Add #[allow(dead_code)] annotations for intentionally unused but kept methods
- Fix API consistency: CLI commands now use BountyClient instead of direct HTTP
- Update status.rs, leaderboard.rs, config.rs to use BountyClient
- Add #[allow(clippy::too_many_arguments)] for internal DB functions
- Fix RegisterResponse.message field marked as unused
- Mark LeaderboardEntry and StatusResponse fields as allowed dead_code
- All tests pass, cargo check and clippy clean

--- a/config.toml
+++ b/config.toml
@@ -15,10 +15,9 @@ host = "0.0.0.0"
 port = 8080
 
 [database]
-# SQLite for local CLI cache
-sqlite_path = "bounty.db"
-# PostgreSQL URL from platform-challenge (env: DATABASE_URL)
-# postgres_url = "postgres://user:pass@host:5432/dbname"
+# PostgreSQL connection string (use DATABASE_URL environment variable)
+# Format: postgres://user:password@host:port/database
+# The server reads DATABASE_URL from environment for PostgreSQL connections
 
 [rewards]
 # Maximum issues per day for full emission (weight = 1.0)
