feat: add clone-repo script to analyze CortexLM/cortex-ide repository
- src/clone-repo.ts: Clones cortex-ide into workspace/cortex-ide/,
  scans repo structure, detects tech stack, extracts config files
- Generates output/repo-structure.json with file tree manifest
  (paths, sizes, languages detected by extension)
- Generates output/repo-context.json with tech stack entries and
  key config file contents for worker context
- package.json: minimal Node.js config with tsx/typescript deps
- tsconfig.json: TypeScript config for the script
- .gitignore: excludes workspace/, output/, node_modules/

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "GitHub Issue Reward System for Platform Network",
   "scripts": {
     "fetch-issues": "tsx src/fetch-issues.ts",
+    "clone-repo": "tsx src/clone-repo.ts",
     "build": "tsc"
   },
   "devDependencies": {
