feat: add main entry point and CLI interface for issue pipeline
- Create src/index.ts as the main entry point chaining the 5-step pipeline:
  1. fetch-issues: fetch from GitHub API with pagination
  2. clone-repo: clone cortex-ide if not already cloned
  3. analyze-issues: enrich issues with file mapping and keywords
  4. generate-worker-specs: create per-issue spec JSON files
  5. orchestrator: dispatch workers in parallel with concurrency control

- Add CLI argument parsing via commander:
  --dry-run: generate specs but don't execute workers
  --issue <number>: process a single issue
  --max-workers <n>: override concurrency limit (default: 4)
  --skip-fetch: use cached output/issues.json

- Create package.json with scripts: start, fetch, analyze, dispatch, dry-run, build
- Create .env.example with GH_TOKEN and TARGET_REPO
- Create tsconfig.json for TypeScript compilation
- Update .gitignore for node_modules, dist, output, repos
- Include README_CONTENT string in src/index.ts documenting usage

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ Thumbs.db
 # Environment
 .env
 .env.local
-*.env
+!.env.example
 
 # Logs
 *.log
@@ -31,3 +31,6 @@ package-lock.json
 
 # Clone script workspace
 workspace/
+
+# Pipeline output
+repos/
