feat: add issue analyzer module (src/analyze-issues.ts)
Create the issue analyzer that reads Phase 1 outputs (issues.json,
repo-context.json, repo-structure.json) and produces analyzed-issues.json
with enriched issue objects containing:

- parsed_body: description, steps to reproduce, expected behavior,
  mentioned files extracted from markdown sections
- affected_files[]: matched against repo-structure.json file tree using
  keyword/component name heuristics and direct file mention detection
- issue_type: classified as bug-fix/feature/refactor/UI/performance via
  title prefix, label, and body pattern scoring
- complexity: simple/medium/complex based on affected file count and
  body length
- keywords[]: technical terms and component names extracted from
  title and body

Also adds package.json, tsconfig.json, and updates .gitignore for
Node.js artifacts.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "clone-repo": "tsx src/clone-repo.ts",
     "generate-worker-specs": "tsx src/generate-worker-specs.ts",
     "analyze": "tsx src/index.ts --skip-fetch",
+    "analyze-issues": "tsx src/analyze-issues.ts",
     "dispatch": "tsx src/index.ts --skip-fetch",
-    "dry-run": "tsx src/index.ts --dry-run"
+    "dry-run": "tsx src/index.ts --dry-run",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "commander": "^12.1.0",
