feat: add worker spec generator for bounty issue dispatch
Create src/generate-worker-specs.ts that reads output/analyzed-issues.json
and generates independent worker specification files per issue in
output/worker-specs/issue-<number>.json.

Each spec contains:
- Issue metadata (number, title, body, url)
- target_repo: CortexLM/cortex-ide
- branch_name: fix/bounty-issue-<number>
- affected_files: list of files to examine
- repo_context: relevant repo structure/config subset
- instructions: detailed prompt for the worker agent
- pr_template: with title and body referencing the original issue

Also generates output/dispatch-manifest.json listing all worker specs
with file paths and metadata for the orchestrator.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fetch": "tsx src/index.ts --skip-fetch=false",
     "fetch-issues": "tsx src/fetch-issues.ts",
     "clone-repo": "tsx src/clone-repo.ts",
+    "generate-worker-specs": "tsx src/generate-worker-specs.ts",
     "analyze": "tsx src/index.ts --skip-fetch",
     "dispatch": "tsx src/index.ts --skip-fetch",
     "dry-run": "tsx src/index.ts --dry-run"
