feat: add worker orchestrator/dispatcher for parallel fix workflows
- src/orchestrator.ts: Main entry point reads output/dispatch-manifest.json,
  spawns worker processes via child_process.fork with tsx loader, limits
  concurrency to 8 parallel workers, tracks status (pending/in-progress/
  completed/failed), retries once on failure, collects results into
  output/results.json, and shows progress output (e.g. [3/12] Fixing issue #45)
- src/worker.ts: Forked child process receives worker spec via IPC, executes
  fix workflow, sends result back to orchestrator
- output/dispatch-manifest.json: Sample manifest with 12 worker specs
- package.json: Add 'dispatch' script (npm run dispatch / npx tsx src/orchestrator.ts)
- .gitignore: Track dispatch-manifest.json, ignore generated results

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,11 @@ logs/
 # Node.js
 node_modules/
 dist/
-output/
 package-lock.json
+
+# Pipeline output (keep dispatch-manifest.json tracked)
+output/*
+!output/dispatch-manifest.json
 
 # Clone script workspace
 workspace/
